rabbitmq_k8s_celery/k8s/deployment/celery_workers.yaml
# namespace
apiVersion: v1
kind: Namespace
metadata:
  name: celery-workers
---
# deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-worker
  namespace: celery-workers
spec:
  replicas: 2
  selector:
    matchLabels:
      name: celery-worker
  template:
    metadata:
      labels:
        name: celery-worker
    spec:
      containers:
        - name: celery-worker
          image: docker.io/library/rabbitmq_celery_poc:latest
          imagePullPolicy: Never
          command:
            - /start-celeryworker
          resources:
            requests:
              cpu: "500m"
              memory: "500Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
---
