rabbitmq_k8s_celery/k8s/deployment/fastapi_server.yaml
# namespace
apiVersion: v1
kind: Namespace
metadata:
  name: fastapi-test
---
# deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-test
  namespace: fastapi-test
spec:
  replicas: 2
  selector:
    matchLabels:
      name: fastapi-test
  template:
    metadata:
      labels:
        name: fastapi-test
    spec:
      containers:
        - name: fastapi
          image: docker.io/library/rabbitmq_celery_poc:latest
          imagePullPolicy: Never
          command:
            - /start
          ports:
            - containerPort: 8001
              name: rest
          resources:
            requests:
              cpu: "500m"
              memory: "500Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
---
# service
apiVersion: v1
kind: Service
metadata:
  name: fastapi-server
  namespace: fastapi-test
spec:
  selector:
    name: fastapi-test
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: rest
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-ingress
  namespace: fastapi-test
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: fastapi-server
                port:
                  number: 80
            path: /
